# LocalDistributedTranslation

./: .gitignore  Modelfile.hunyuan  README.md  README_en.md  README_zh.md  client.py  install_env.bat  install_master.bat  install_slave.bat  pyproject.toml  requirements.txt  start_master.bat  start_slave.bat
common/: schemas.py
localtrans/: __init__.py  client.py  config.py
master/: config.yaml  master.py  requirements.txt
scripts/: _e2e_test.py  check_ollama.py  check_python.py  slave_selftest.py
slave/: config.yaml  requirements.txt  slave.py
